--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-streamlit==1.35.0
-streamlit-webrtc==0.46.1
-openai-whisper==20230314
-gTTS==2.5.1
-requests==2.31.0
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
-langchain==0.1.17
-langchain-community==0.0.37
-langchain-huggingface==0.0.6
-torch==2.1.0
-numpy==1.24.4
+streamlit
+streamlit-mic-recorder
+openai-whisper
+gTTS
+torch
+sentence-transformers
+langchain
+langchain-community
+langchain-huggingface
+faiss-cpu
